# lab4

./: ArraySequence.h  CMakeLists.txt  DynamicArray.h  Sequence.h  UI.cpp  UI.h  functions.cpp  functions.h  generate.cpp  generate.h  main.c  main.cpp  tests.cpp  tests.h  tree.h
